updated nav component, fix layout issue

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -163,7 +163,7 @@ a {
   cursor: pointer;
   font-size: 1.8rem;
   font-weight: 600;
-  padding: 2rem 3rem;
+  padding: 2rem 4vw;
   margin: 1rem 0;
   text-align: center;
   text-transform: uppercase;
@@ -248,6 +248,7 @@ a {
   border: 0;
   flex-grow: 1;
   padding: 1.5rem 2rem;
+  width: 0;
 }
 
 .input-group .btn {
@@ -654,8 +655,9 @@ a {
 }
 
 .block-domain__prices {
+  color: var(--color-headings);
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 6rem);
   font-size: 2rem;
   font-weight: 600;
@@ -674,6 +676,7 @@ a {
 
 .block-plans .grid {
   gap: 8rem 4rem;
+  justify-content: center;
 }
 
 .block-plans .card {
